--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,27 @@
   color: white;
 }
 
+.Signin {
+  background: linear-gradient(-135deg, #c850c0, #4158d0);
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.page-container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.content-wrap {
+  flex: 1;
+}
+
 .App-link {
   color: #61dafb;
 }
