--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,7 +1,8 @@
 .main-footer {
   color: #212529;
-  background-color: #f8f9fa;
-  padding-top: 3em;
+  /* background-color: #f8f9fa; */
+  background-color: lightgray;
+  padding-top: 1em;
   position: relative;
   bottom: 0;
   width: 100%;
