--- a/src/components/Aboutus.css
+++ b/src/components/Aboutus.css
@@ -4,6 +4,20 @@
   margin-bottom: 2em;
 }
 
+.HeaderCss {
+  background-color: lightgray;
+}
+
+.logout {
+float: center;
+margin: 0 1em 1em 0;
+width: 50%;
+display: flex;
+justify-content: center;
+margin-left: auto;
+margin-right: auto;
+}
+
 .about-logo {
   float: center;
   margin: 0 1em 1em 0;
@@ -15,12 +29,24 @@
   margin-bottom: -5px;
 }
 
+.about-org {
+  float: right;
+  margin: 0 1em 1em 0;
+  width: 60%;
+
+  display: flex;
+
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: -104px;
+}
+
 .about-profile-pic {
   float: center;
   margin: 0 1em 1em 0;
   width: 100%;
 
-  display: flex;
+  display: inline-flex;
   justify-content: center;
   margin-left: auto;
   margin-right: auto;
