--- a/src/App.css
+++ b/src/App.css
@@ -70,7 +70,7 @@
 
 .ButtonCssLogin {
   margin-top: 10%;
-  margin-left: 30%;
+  margin-left: 35%;
   background-color: gray;
   color: white;
 }
@@ -119,6 +119,10 @@
   color: black;
 }
 
+.marginLeftForLeaveRequestButtons {
+  margin-left: 36%;
+}
+
 .inlineFlex {
   margin-top: 2%;
 }
@@ -144,6 +148,10 @@
   margin-left: 18%;
 }
 
+.marginCSSLogin {
+  margin-right: 8%;
+}
+
 .leaveReq {
   background-color: white;
   display: flex;
@@ -152,6 +160,16 @@
   justify-content: center;
   font-size: calc(4px + 2vmin);
   color: black;
+}
+
+.OrgChange {
+  margin-left: -34px;
+  padding: 0px;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  text-align: center;
+  font-family: Helvetica;
 }
 
 .page-container {
