--- a/src/components/Aboutus.css
+++ b/src/components/Aboutus.css
@@ -5,17 +5,18 @@
 }
 
 .HeaderCss {
-  background-color: lightgray;
+  background-color: gray;
 }
 
 .logout {
-float: center;
-margin: 0 1em 1em 0;
-width: 50%;
-display: flex;
-justify-content: center;
-margin-left: auto;
-margin-right: auto;
+  float: center;
+  margin: 0 1em 1em 0;
+  width: 50%;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .about-logo {
