UI , Folder structure Update and Functionality Update for Department page

--- a/src/App.css
+++ b/src/App.css
@@ -178,6 +178,15 @@
   min-height: 100vh;
 }
 
+.tabledataAlignCenter {
+  text-align: center;
+  padding-top: 2%;
+}
+
+.tableDataButtonPadding {
+  display: block;
+}
+
 .content-wrap {
   flex: 1;
 }
